# adapta-ai

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  LICENSE-DATA  Makefile  NOTICE  README.md  design-tokens.css  i18n.js  index.html  mock-data.js
b2c/: sw.js  (+16 more)
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py  onboarding.py
backend/app/api/v1/: auth.py  chat.py  chat_escalations.py  chat_stats.py  chat_threads.py  company.py  demo.py  docs_login.py  documents.py  invites.py  journey.py  workers.py
backend/app/auth/: deps.py  invite.py  jwt.py  password.py
backend/app/chat/: message_handler.py  router.py  schemas.py  sse_streamer.py
backend/app/db/: models.py
backend/app/email/: mailhog_client.py
backend/app/email/templates/: invite.html
backend/app/llm/: fallback.py  gigachat_client.py  prompt_builder.py  qwen_client.py  qwen_prompts.py
backend/app/middleware/: __init__.py  static_auth.py
backend/app/rag/: answer_parser.py  chunker.py  embedder.py  factory.py  loader.py  normalize.py  prompts.py  retriever.py  schemas.py  store.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_documents.py  0003_ai_messages.py  0004_documents_sber_global.py  0005_ai_messages_confidence.py  0006_ai_messages_escalate.py  0007_ai_messages_hr_role.py  0008_onboarding_documents.py  0009_ai_messages_is_emergency.py
backend/scripts/: clear_chat_history.py  eval_rag.py  eval_voice.py  ingest_domain_docs.py  reindex_all_docs.py  run_ablation_sweep.sh  seed_demo.py  seed_partner_products.py  smtp_smoke.py  translate_golden_to_hi.py
backend/tests/: conftest.py
backend/tests/e2e/: test_demo_flow.py  test_local_golden_path.py
backend/tests/fixtures/: create_fixtures.py
backend/tests/integration/: conftest.py  test_documents.py  test_healthz.py  test_landing.py  test_migrations.py  test_seed_demo.py
backend/tests/integration/auth/: conftest.py  test_demo_login_cookie.py  test_invite.py  test_login.py  test_notifications.py  test_session_cookie.py  test_static_auth.py  test_workers_list.py
backend/tests/integration/chat/: conftest.py  test_chat_persistence.py  (+2 more)
backend/tests/unit/: test_chat_emergency.py  test_chat_escalations_severity.py  test_chat_stats.py  test_config.py  test_database.py  test_documents_md_loader.py  test_llm_gigachat.py  test_llm_qwen.py  test_pytest_config.py  test_rag_chunker.py  test_rag_embedder.py  test_rag_loader.py  test_rag_normalize.py  test_rag_retriever.py  test_rag_store.py  test_script_detect_and_canonicalize.py
(+24 files in other folders)
