[project]
name = "adapta-backend"
version = "0.1.0"
description = "AdaptaAI backend — FastAPI + Postgres + ChromaDB + GigaChat/Qwen split."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "AdaptaAI Contributors" }]

dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.32.*",
    "sqlalchemy[asyncio]==2.0.*",
    "asyncpg==0.30.*",
    "greenlet>=3.0",
    "psycopg2-binary==2.9.*",
    "alembic==1.14.*",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "python-dotenv>=1.0,<2",
    "httpx>=0.27,<1",
    "bcrypt>=4.0,<5",
    "pyjwt>=2.9,<3",
    "aiosmtplib>=3.0,<4",
    "python-multipart>=0.0.9,<1",
    "pypdf==5.1.*",
    "python-docx==1.2.*",
    "langchain-text-splitters==0.3.*",
    "sentence-transformers>=3.3,<4",
    "chromadb>=1.0,<2",
    "openai>=1.50,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<8.4",
    "pytest-asyncio==0.24.*",
    "pytest-httpx>=0.32,<1",
    "testcontainers==4.*",
    "greenlet>=3.0",
    "ruff>=0.7,<1",
    "mypy>=1.13,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: marks tests as integration (require testcontainers/Postgres)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
ignore = ["PLR0913", "PLR2004", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "PLC0415"]
"migrations/**" = ["E501"]
# eval_voice.py is a standalone research/eval utility: lazy optional imports,
# broad excepts for dataset-fallback robustness, urllib downloads, long funcs.
"scripts/eval_voice.py" = ["PLC0415", "PLR0915", "PLR0912", "S310", "E501", "RUF046"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = []
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "testcontainers.*",
    "alembic.*",
    "asyncpg.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "datasets>=4.8.5",
    "faster-whisper>=1.2.1",
    "jiwer>=4.0.0",
    "matplotlib>=3.10.9",
    "mypy>=1.20.2",
    "playwright>=1.60.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
    "reportlab>=4.5.1",
    "ruff>=0.15.14",
    "soundfile>=0.13.1",
    "testcontainers>=4.14.2",
]
